<resources>
    <string name="app_name">SQLite</string>
    <string name="action_settings">Settings</string>

    <string name="show">查看数据库</string>
    <string name="search">查询</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="edit">修改</string>
    <string name="clear">清空表格</string>

    <string name="id">ID</string>
    <string name="name">姓名</string>
    <string name="phone_number">电话</string>
    <string name="tower_number">电塔编号</string>
    <string name="work_state">工作状况</string>

    <string name="title_activity_search">查询</string>
    <string name="title_activity_add">添加</string>
    <string name="title_activity_delete">删除</string>
    <string name="title_activity_edit">修改</string>
    <string name="title_activity_show">查看数据库</string>
    <string name="title_activity_file">查看个人文件</string>

    <string name="folder_all">All Images</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">Select images amount is limit</string>
    <string name="action_done">Done</string>
    <string name="photo_unit">Shot</string>
    <string name="tip_take_photo">Take photo</string>
    <string name="title_activity_download_manager">DownloadManagerActivity</string>
</resources>
