<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add"
    android:orientation="vertical"
    tools:context="com.hochan.sqlite.AddActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorGray"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    style="@style/AddTextViewStyle"
                    android:text="@string/name"/>
                <EditText
                    android:id="@+id/ed_name"
                    style="@style/EditTextStyle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    style="@style/AddTextViewStyle"
                    android:text="@string/phone_number"/>
                <EditText
                    android:id="@+id/ed_phone_number"
                    style="@style/EditTextStyle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    style="@style/AddTextViewStyle"
                    android:text="@string/tower_number"/>
                <EditText
                    android:id="@+id/ed_tower_number"
                    style="@style/EditTextStyle"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    style="@style/AddTextViewStyle"
                    android:text="@string/work_state"/>
                <EditText
                    android:id="@+id/ed_work_state"
                    style="@style/EditTextStyle"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_add"
        style="@style/MainButtonStyle"
        android:text="@string/add"/>
</LinearLayout>
