<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="bottom">
            <TextView
                style="@style/AddTextViewStyle"
                android:text="@string/name"
                android:layout_gravity="bottom"/>
            <EditText
                android:id="@+id/ed_name"
                style="@style/EditTextStyle"
                android:backgroundTint="@color/colorBackground"
                android:layout_gravity="bottom"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="bottom">
            <TextView
                style="@style/AddTextViewStyle"
                android:text="@string/phone_number"/>
            <EditText
                android:id="@+id/ed_phone_number"
                android:inputType="number"
                style="@style/EditTextStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="bottom">
            <TextView
                style="@style/AddTextViewStyle"
                android:text="@string/tower_number"/>
            <EditText
                android:id="@+id/ed_tower_number"
                android:inputType="number"
                style="@style/EditTextStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center|left">
            <TextView
                style="@style/AddTextViewStyle"
                android:text="@string/work_state"/>
            <RadioGroup
                android:gravity="bottom"
                android:id="@+id/rg_work_state"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:text="在岗"
                    android:checked="true"
                    android:id="@+id/rb_work_state_on"
                    style="@style/EditTextStyle"/>
                <RadioButton
                    android:layout_marginLeft="10dp"
                    android:text="休假"
                    android:id="@+id/rb_work_state_off"
                    style="@style/EditTextStyle"/>
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btn_picture"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="图片"
            android:textColor="@color/colorText"
            android:textSize="14sp"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"/>
    </LinearLayout>
</ScrollView>
